[package]
name = "orchestrate-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2"
actix-web = "4.0"
diesel = { version = "1.4", features = ["sqlite"] }
diesel_codegen = { version = "1.4", features = ["sqlite"] }
dotenv = "0.15"
